<resources>
    <string name="app_name">GADS Leaderboard</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tabLearning">Learning Leaders</string>
    <string name="tabSkillIQ">Skill IQ Leaders</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="learners_name">Top learners name</string>
    <string name="learners_details">Top learners details</string>
    <string name="error_connection">Problem encountered loading the data, try to check your connection</string>
    <string name="leaderboad">LEADERBOAD</string>
    <string name="submit">Submit</string>
    <string name="text_learning_leader_details"> learning hours, </string>
    <string name="text_skill_iq_details"> skill IQ Score, </string>
    <string name="hours_badge_description">Hours Badge</string>>
    <string name="skill_iq_badge_description">Skill IQ Badge</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="email_address_hint">Email Address</string>
    <string name="project_link_hint">Project on GITHUB (link)</string>
    <string name="submission_successful">Submission Successful</string>
    <string name="submission_not_successful">Submission not Successful</string>
    <string name="are_you_sure">Are you sure</string>
    <string name="yes">Yes</string>
    <string name="question_mark">\?</string>
    <string name="content_description_cancel_image">Cancel Image</string>
    <string name="content_description_success_image">"Success Image "</string>
    <string name="content_description_error_image">Error Image</string>
    <string name="project_submission">Project Submission</string>
</resources>