<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    >

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_skill_iq"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/low_padding"
        app:cardCornerRadius="@dimen/low_padding"
        app:cardElevation="@dimen/low_padding"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/large_margin"
            android:orientation="horizontal"
            android:weightSum="100">

            <ImageView
                android:id="@+id/skill_iq_badge"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="40"
                android:contentDescription="@string/hours_badge_description"
                android:padding="@dimen/low_padding" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="60"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingEnd="@dimen/standard_view_padding"
                android:paddingStart="@dimen/large_margin">


                <TextView
                    android:id="@+id/tvName_skill_iq"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/learners_name"
                    android:textColor="@color/colorDarkGrey"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvDetails_skill_iq"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/learners_details"
                    android:textSize="18sp" />

            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>