<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".SubmitProject">

    <include
        android:id="@+id/submit_activity_toolbar"
        layout="@layout/submit_project_tool_bar"
        android:layout_width="0dp"
        android:layout_height="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_submit_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:padding="@dimen/normal_padding"
        android:text="Project Submission"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/submit_activity_toolbar" />

    <View
        android:id="@+id/submit_view"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/separator_submit_layout"
        android:fadingEdge="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_submit_title"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        style="@style/MyHintTextAppearance"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:background="@color/colorPrimary"
        android:ems="10"
        android:hint="@string/project_link_hint"
        android:inputType="textPersonName"
        android:padding="@dimen/standard_view_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_email" />

    <Button
        android:id="@+id/button"
        android:layout_width="171dp"
        android:layout_height="43dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/submit_project_btn"
        android:lineSpacingExtra="8sp"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="@color/colorPrimary"
        app:backgroundTintMode="multiply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/txt_email"
        style="@style/MyHintTextAppearance"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:background="@color/colorPrimary"
        android:ems="10"
        android:hint="@string/email_address_hint"
        android:inputType="textPersonName"
        android:padding="@dimen/standard_view_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.562"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:gravity="bottom"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submit_view">

        <EditText
            android:id="@+id/txt_first_name"
            style="@style/MyHintTextAppearance"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginEnd="@dimen/standard_view_padding"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:ems="10"
            android:hint="@string/first_name_hint"
            android:inputType="textPersonName"
            android:padding="@dimen/standard_view_padding" />

        <EditText
            android:id="@+id/txt_last_name"
            style="@style/MyHintTextAppearance"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:ems="10"
            android:hint="@string/last_name_hint"
            android:inputType="textPersonName"
            android:padding="@dimen/standard_view_padding" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>