<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:orientation="horizontal"
            android:weightSum="100">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/submit_btn"
                    android:layout_width="134dp"
                    android:layout_height="33dp"
                    android:layout_marginBottom="4dp"
                    android:layout_marginEnd="36dp"

                    android:background="@drawable/submit_btn"
                    android:drawablePadding="0dp"
                    android:padding="0dp"
                    android:text="@string/submit"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@color/colorBlack"
                    android:textIsSelectable="false"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:id="@+id/tvLeaderboad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="4dp"
                    android:layout_marginStart="60dp"
                    android:text="@string/leaderboad"
                    android:textColor="@color/colorPrimary"
                    android:textSize="26sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>
        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@android:color/transparent"
            app:tabGravity="fill"
            app:tabIndicatorHeight="8dp"
            app:tabMinWidth="300dp"
            app:tabMode="fixed"
            app:tabPaddingBottom="12dp"
            app:tabPaddingTop="15dp"
            app:tabSelectedTextColor="@color/colorPrimary"
            app:tabTextColor="@color/colorPrimaryDark"
            app:tabTextAppearance="@style/MyTabLayoutTextAppearance">


        </com.google.android.material.tabs.TabLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/colorDivider" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:tag="@string/tabLearning"
           />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>