<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/warning_dialog_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:padding="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_warning"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_view_padding"
        android:background="@drawable/dialog_background"
        android:padding="@dimen/normal_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <Button
            android:id="@+id/accept_btn"
            android:layout_width="131dp"
            android:layout_height="58dp"
            android:layout_marginBottom="60dp"
            android:layout_marginTop="80dp"
            android:gravity="center"
            android:padding="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            app:cornerRadius="6dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            app:strokeColor="@color/colorAccent"
            app:strokeWidth="1dp" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cancel_cv">

            <TextView
                android:id="@+id/txt_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/are_you_sure"
                android:textAlignment="center"
                android:textColor="@color/colorDarkGrey"
                android:textSize="24sp"
                android:textStyle="bold" />
            <!--suppress AndroidDomInspection -->
            <TextView
                android:id="@+id/txt_question_mark"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:paddingLeft="@dimen/low_padding"
                android:paddingRight="@dimen/low_padding"
                android:text="@string/question_mark"
                android:textSize="36sp"
                android:textStyle="bold" />

        </LinearLayout>


        <androidx.cardview.widget.CardView
            android:id="@+id/cancel_cv"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:padding="0dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.94"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/cancel_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:drawable/screen_background_light_transparent" />

            <ImageView
                android:id="@+id/cancel_img"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/content_description_cancel_image"
                android:src="@drawable/ic_baseline_cancel_24" />

        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>


